k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yorker-airlines-backend-svc
spec:
  selector:
    app: yorker-airlines-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
