k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yorker-airlines-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: yorker-airlines.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yorker-airlines-backend-svc
                port:
                  number: 80
